Renamed "Solver" to "Multistep Solver"

--- a/test/fullscale_tests/test_multistep/multistep.yaml
+++ b/test/fullscale_tests/test_multistep/multistep.yaml
@@ -79,7 +79,7 @@ PeriLab:
             Value: 20-10*t
             Type: Initial
             Step ID: 1
-    Solver:
+    Multistep Solver:
       Step 1:
         Step ID: 1
         Initial Time: 0.0
