static solver works #150

--- a/test/fullscale_tests/test_bond_based_elastic/test_static_bond_based_elastic_2D.yaml
+++ b/test/fullscale_tests/test_bond_based_elastic/test_static_bond_based_elastic_2D.yaml
@@ -69,6 +69,7 @@ PeriLab:
     Static:
       NLSolve: true
       Fixed dt: 1e-6
+      Maximum number of iterations: 10
       Show solver iteration: true
   Outputs:
     Output1:
