--- a/examples/DCB/DCBmodel copy.yaml
+++ b/examples/DCB/DCBmodel copy.yaml
@@ -31,13 +31,13 @@ PeriLab:
       Coordinate: y
       Node Set: Node Set 1
       Variable: Displacements
-      Value: 4.4*t
+      Value: 2.4*t
       Type: Dirichlet
     BC_2:
       Coordinate: y
       Node Set: Node Set 2
       Variable: Displacements
-      Value: -4.4*t
+      Value: -2.4*t
       Type: Dirichlet
     # BC_3:
     #   Node Set: Node Set 1 + Node Set 2 + Node Set 3 + Node Set 4
@@ -82,18 +82,20 @@ PeriLab:
     Output1:
       Number of Output Steps: 100
       Output File Type: Exodus
-      Output Filename: DCBmodel_Output1
+      Output Filename: DCBmodel_Output
       Output Variables:
         Damage: true
         Displacements: true
         Forces: true
-        Number of Neighbors: true
         External_Displacement: true
+        Cauchy Stress: true
         External_Force: true
+        Plastic Strain: True
+        von Mises Yield Stress: True
     Output2:
       Number of Output Steps: 100
       Output File Type: CSV
-      Output Filename: DCBmodel_Output1
+      Output Filename: DCBmodel_Output
       Output Variables:
         External_Displacement: true
         External_Force: true
@@ -101,23 +103,20 @@ PeriLab:
     Damage Models:
       Damage:
         Damage Model: Critical Energy
-        Critical Value: 0.002
+        Critical Value: 0.02
     Material Models:
       Aluminium:
-        Material Model: PD Solid Elastic
-        Poisson's Ratio: 0.3
-        Symmetry: isotropic plane stress
-        Young's Modulus: 40000.0
-    Pre Calculation Global:
-      Bond Associated Deformation Gradient: false
-      Deformation Gradient: false
-      Deformed Bond Geometry: true
-      Shape Tensor: false
+        Material Model: "Correspondence Elastic+Correspondence Plastic"
+        Symmetry: "isotropic plane stress"
+        Young's Modulus: 7.0e+5
+        Poisson's Ratio: 0.33
+        Yield Stress: 50
+        Zero Energy Control: "Global"
   Solver:
     Damage Models: true
-    Final Time: 0.00043
+    Final Time: 0.0013
     Initial Time: 0.0
     Material Models: true
     Verlet:
       Safety Factor: 0.95
-      Numerical Damping: 5.0e-06
+      Numerical Damping: 5.0e-03
