--- a/examples/Dogbone/Dogbone_plastic_corr_static.yaml
+++ b/examples/Dogbone/Dogbone_plastic_corr_static.yaml
@@ -95,16 +95,22 @@ PeriLab:
       Output Variables:
         External_Forces: True
         External_Displacements: True
+  Surface Correction:
+    Type: Volume Correction
   Solver:
     Material Models: true
-    Damage Models: true
-    Final Time: 1e-5
+    Damage Models: false
+    Final Time: 1
     Initial Time: 0.0
     Numerical Damping: 0.0005
-    nsteps: 500
+    Number of Steps: 5000
     Static:
       NLsolver: true
       Show solver iteration: true
-      Residual tolerance: 1e-5
-      Solution tolerance: 1e-5
+      Residual tolerance: 1e-6
+      Solution tolerance: 1e-6
+      Linear Start Value: 0 0.002 -0.0002 0.0002
+      Residual scaling: 5000 # should be for complex problems in the range of the Young's modulus
+      m: 8
+
       #Fixed dt: 1e-8
