--- a/test/fullscale_tests/test_bond_based_elastic/test_static_bond_based_elastic_2D.yaml
+++ b/test/fullscale_tests/test_bond_based_elastic/test_static_bond_based_elastic_2D.yaml
@@ -74,6 +74,8 @@ PeriLab:
       Residual tolerance: 1e-8
       Solution tolerance: 1e-8
       Residual scaling: 1 # should be for complex problems in the range of the Young's modulus
+      Linear Start Value: 0 0 0 0
+      m: 5
   Outputs:
     Output1:
       Output Filename: "test_static_bond_based_elastic_2D"
