--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+LazyGrids = "7031d0ef-c40d-4431-b2f8-61a8d2f650db"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -23,6 +24,7 @@ LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
+NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PointInPoly = "b33f1834-3304-4c26-96eb-60ff7015163d"
@@ -54,6 +56,7 @@ Dierckx = "^0.5"
 Exodus = "^0.13"
 FastGaussQuadrature = "^1"
 JSON3 = "^1"
+LazyGrids = "^1"
 LibGit2 = "^1"
 LinearAlgebra = "^1"
 Logging = "^1"
@@ -62,6 +65,7 @@ LoopVectorization = "0.12"
 MPI = "^0.20"
 MPIPreferences = "^0.1"
 NLsolve = "4.5.1"
+NearestNeighbors = "^0.4"
 OrderedCollections = "^1"
 Pkg = "^1"
 PointInPoly = "1.2.0"
