--- a/Project.toml
+++ b/Project.toml
@@ -22,10 +22,10 @@ LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
+Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
-PointInPoly = "b33f1834-3304-4c26-96eb-60ff7015163d"
 PointNeighbors = "1c4d5385-0a27-49de-8e2c-43b175c8985c"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
@@ -61,10 +61,10 @@ LoggingExtras = "^1"
 LoopVectorization = "0.12"
 MPI = "^0.20"
 MPIPreferences = "^0.1"
+Meshes = "0.52.17"
 NLsolve = "4.5.1"
 OrderedCollections = "^1"
 Pkg = "^1"
-PointInPoly = "1.2.0"
 PointNeighbors = "^0.4"
 PrecompileTools = "^1"
 PrettyTables = "^2"
