--- a/Project.toml
+++ b/Project.toml
@@ -38,6 +38,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StyledStrings = "f489334b-da3d-4c2e-b8f0-e476e12c162b"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
@@ -79,6 +80,7 @@ Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^3"
 TimerOutputs = "^0.5"
+Unitful = "1.22.0"
 YAML = "^0.4"
 ZipArchives = "^1, 2"
 julia = "^1.6"
