--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.3.6"
 [deps]
 AbaqusReader = "bc6b9049-e460-56d6-94b4-a597b2c0390d"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+CDDLib = "3391f64e-dcde-5f30-b752-e11513730f60"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -16,6 +17,7 @@ Exodus = "f57ae99e-f805-4780-bdca-96e224be1e5a"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LazyGrids = "7031d0ef-c40d-4431-b2f8-61a8d2f650db"
+
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -29,6 +31,7 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PointNeighbors = "1c4d5385-0a27-49de-8e2c-43b175c8985c"
+Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -48,6 +51,7 @@ ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 AbaqusReader = "^0.2.6"
 Aqua = "^0.8"
 ArgParse = "^1"
+CDDLib = "0.10.0"
 CSV = "^0.10"
 Combinatorics = "^1"
 DataFrames = "^1"
@@ -58,6 +62,7 @@ Exodus = "^0.13"
 FastGaussQuadrature = "^1"
 JSON3 = "^1"
 LazyGrids = "^1"
+LazySets = "3.1.0"
 LibGit2 = "^1"
 LinearAlgebra = "^1"
 Logging = "^1"
@@ -71,6 +76,7 @@ NearestNeighbors = "^0.4"
 OrderedCollections = "^1"
 Pkg = "^1"
 PointNeighbors = "^0.4"
+Polyhedra = "0.8.1"
 PrecompileTools = "^1"
 PrettyTables = "^2"
 Printf = "^1"
