added Reference Temperature for thermal expansion #252

--- a/examples/Additive/Zugstab.yaml
+++ b/examples/Additive/Zugstab.yaml
@@ -29,7 +29,8 @@ PeriLab:
         Thermal Conductivity: 0.12
         Thermal Conductivity Print Bed: 1.2
         Print Bed Temperature: 60.0
-        Thermal Expansion Coefficient: 7.0e-5
+        # Thermal Expansion Coefficient: 7.0e-5
+        # Reference Temperature: 0.
         Required Specific Volume: 1.6
   Blocks:
     block_1:
