--- a/examples/PeriLab/PeriLab_additive.yaml
+++ b/examples/PeriLab/PeriLab_additive.yaml
@@ -27,6 +27,7 @@ PeriLab:
         # Thermal Conductivity Print Bed: 1.2
         # Print Bed Temperature: 60.0
         Thermal Expansion Coefficient: 7.0e-5
+        Reference Temperature: 0.
   Blocks:
     block_1:
       Block ID: 1
