--- a/test/fullscale_tests/test_thermal_expansion/thermal_expansion_PD_Solid_static.yaml
+++ b/test/fullscale_tests/test_thermal_expansion/thermal_expansion_PD_Solid_static.yaml
@@ -20,6 +20,7 @@ PeriLab:
       Thermal test:
         Thermal Model: "Thermal Expansion"
         Thermal Expansion Coefficient: 2.5e-2
+        Reference Temperature: 0.0
   Blocks:
     block_1:
       Block ID: 1
