--- a/test/fullscale_tests/test_thermal_expansion/thermal_expansion_bond_based.yaml
+++ b/test/fullscale_tests/test_thermal_expansion/thermal_expansion_bond_based.yaml
@@ -19,6 +19,7 @@ PeriLab:
       Thermal test:
         Thermal Model: "Thermal Expansion"
         Thermal Expansion Coefficient: 2.5e-2
+        Reference Temperature: 0.0
   Blocks:
     block_1:
       Block ID: 1
