--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,6 @@ NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PointNeighbors = "1c4d5385-0a27-49de-8e2c-43b175c8985c"
-PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
@@ -65,13 +64,12 @@ LoggingExtras = "^1"
 LoopVectorization = "0.12"
 MPI = "^0.20"
 MPIPreferences = "^0.1"
-Meshes = "0.52.17, 0.53"
-NLsolve = "4.5.1"
+Meshes = "^0.52"
+NLsolve = "^4.5"
 NearestNeighbors = "^0.4"
 OrderedCollections = "^1"
 Pkg = "^1"
 PointNeighbors = "^0.4"
-PrecompileTools = "^1"
 PrettyTables = "^2"
 Printf = "^1"
 ProgressBars = "^1"
@@ -84,7 +82,7 @@ Tensors = "^1"
 Test = "^1"
 TestSetExtensions = "^3"
 TimerOutputs = "^0.5"
-Unitful = "1.22.0"
+Unitful = "^1.22"
 YAML = "^0.4"
 ZipArchives = "^1, 2"
 julia = "^1.6"
