--- a/Project.toml
+++ b/Project.toml
@@ -44,48 +44,48 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
 [compat]
-AbaqusReader = "^0.2.6"
-Aqua = "^0.8"
-ArgParse = "^1"
-CSV = "^0.10"
-Combinatorics = "^1"
-DataFrames = "^1"
-DataStructures = "^0.18"
-Dates = "^1"
-Dierckx = "^0.5"
-Exodus = "^0.13"
-FastGaussQuadrature = "^1"
-JSON3 = "^1"
-LazyGrids = "^1"
-LibGit2 = "^1"
-LinearAlgebra = "^1"
-Logging = "^1"
-LoggingExtras = "^1"
+AbaqusReader = "0.2.6"
+Aqua = "0.8"
+ArgParse = "1"
+CSV = "0.10"
+Combinatorics = "1"
+DataFrames = "1"
+DataStructures = "0.18"
+Dates = "1"
+Dierckx = "0.5"
+Exodus = "0.13"
+FastGaussQuadrature = "1"
+JSON3 = "1"
+LazyGrids = "1"
+LibGit2 = "1"
+LinearAlgebra = "1"
+Logging = "1"
+LoggingExtras = "1"
 LoopVectorization = "0.12"
-MPI = "^0.20"
-MPIPreferences = "^0.1"
-Meshes = "^0.52"
-NLsolve = "^4.5"
-NearestNeighbors = "^0.4"
-OrderedCollections = "^1"
-Pkg = "^1"
-PointNeighbors = "^0.4"
-PrettyTables = "^2"
-Printf = "^1"
-ProgressBars = "^1"
-Random = "^1"
-Rotations = "^1"
-StaticArrays = "^1"
-Statistics = "^1"
-StyledStrings = "^1"
-Tensors = "^1"
-Test = "^1"
-TestSetExtensions = "^3"
-TimerOutputs = "^0.5"
-Unitful = "^1.22"
-YAML = "^0.4"
-ZipArchives = "^1, 2"
-julia = "^1.6"
+MPI = "0.20"
+MPIPreferences = "0.1"
+Meshes = "0.51"
+NLsolve = "4.5"
+NearestNeighbors = "0.4"
+OrderedCollections = "1"
+Pkg = "1"
+PointNeighbors = "0.4"
+PrettyTables = "2"
+Printf = "1"
+ProgressBars = "1"
+Random = "1"
+Rotations = "1"
+StaticArrays = "1"
+Statistics = "1"
+StyledStrings = "1"
+Tensors = "1"
+Test = "1"
+TestSetExtensions = "3"
+TimerOutputs = "0.5"
+Unitful = "1.22"
+YAML = "0.4"
+ZipArchives = "1, 2"
+julia = "1.6"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
