--- a/examples/Dogbone/Dogbone_plastic_corr.yaml
+++ b/examples/Dogbone/Dogbone_plastic_corr.yaml
@@ -10,7 +10,7 @@ PeriLab:
       Node Set 2: ns_Dogbone_2.txt
     Type: Text File
   Models:
-    Pre Calculation:
+    Pre Calculation Global:
       Deformed Bond Geometry: true
       Deformation Gradient: false
       Shape Tensor: false
@@ -34,11 +34,13 @@ PeriLab:
       Node Set: Node Set 1
       Variable: Displacements
       Value: 0
+      Type: Dirichlet
     BC_2:
       Coordinate: x
       Node Set: Node Set 2
       Variable: Displacements
       Value: 0.1*t
+      Type: Dirichlet
   Blocks:
     block_1:
       Block ID: 1
