--- a/examples/ENFmodel/ENFmodel.yaml
+++ b/examples/ENFmodel/ENFmodel.yaml
@@ -131,7 +131,7 @@ PeriLab:
         Material Model: "Bond-based Elastic"
         Poisson's Ratio: 0.33
         Young's Modulus: 71700.0
-        # Symmetry: isotropic plane stress
+        Symmetry: isotropic plane stress
         Zero Energy Control: Global
   Solver:
     Damage Models: true
