--- a/test/fullscale_tests/test_bond_based_elastic/test_static_bond_based_elastic_2D.yaml
+++ b/test/fullscale_tests/test_bond_based_elastic/test_static_bond_based_elastic_2D.yaml
@@ -65,6 +65,7 @@ PeriLab:
   Solver:
     Initial Time: 0.0
     Final Time: 5.0e-6
+    Fixed dt: 7e-7
     Number of Steps: 7
     Static:
       NLSolve: true
