--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,14 @@ jobs:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-runtest@v1
+      - name: Archive Test Results
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifact-${{matrix.julia-version}}
+          path: test/fullscale_tests/
+          if-no-files-found: error
+          retention-days: 30
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5.4.0
         with:
