--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ LoggingExtras = "1"
 LoopVectorization = "0.12"
 MPI = "0.20"
 MPIPreferences = "0.1"
-Meshes = "0.51"
+Meshes = "0.51, 0.53"
 NLsolve = "4.5"
 NearestNeighbors = "0.4"
 OrderedCollections = "1"
