CompatHelper: bump compat for PointNeighbors to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -69,7 +69,7 @@ NLsolve = "4.5"
 NearestNeighbors = "0.4"
 OrderedCollections = "1"
 Pkg = "1"
-PointNeighbors = "0.4"
+PointNeighbors = "0.4, 0.5"
 PrettyTables = "2"
 Printf = "1"
 ProgressBars = "1"
