--- a/examples/contact/contact.yaml
+++ b/examples/contact/contact.yaml
@@ -24,6 +24,10 @@ PeriLab:
         Side Length: 2.0
         Type: Rectangular_Plane
   Models:
+    Damage Models:
+      Dam_1:
+        Damage Model: Critical Stretch
+        Critical Value: 0.001
     Material Models:
       Mat_1:
         Material Model: "Bond-based Elastic"
@@ -41,6 +45,7 @@ PeriLab:
       Block ID: 1
       Density: 2700
       Horizon: 0.00751
+      Damage Model: Dam_1
       Material Model: Mat_1
     block_2:
       Block ID: 2
@@ -60,6 +65,12 @@ PeriLab:
       Coordinate: "y"
       Value: -25
       Type: Initial
+    BC_3:
+      Variable: "Displacements"
+      Node Set: "Node Set 2"
+      Coordinate: "x"
+      Value: 0
+      Type: Dirichlet
   Solver:
     Material Models: True
     Initial Time: 0.0
