--- a/test/fullscale_tests/test_penalty_contact/contact.yaml
+++ b/test/fullscale_tests/test_penalty_contact/contact.yaml
@@ -63,12 +63,12 @@ PeriLab:
   Solver:
     Material Models: True
     Initial Time: 0.0
-    Final Time: 2.14521e-04
+    Final Time: 2.14521e-05
     Verlet:
       Safety Factor: 0.9
   Outputs:
     Output1:
-      Output Filename: "contact"
+      Output Filename: "penalty_contact"
       Output Frequency: 50
       Output Variables:
         Displacements: True
