--- a/examples/Contact/Contact.yaml
+++ b/examples/Contact/Contact.yaml
@@ -71,7 +71,7 @@ PeriLab:
       Safety Factor: 0.9
   Outputs:
     Output1:
-      Output Filename: "contact"
+      Output Filename: "Contact"
       Output Frequency: 50
       Output Variables:
         Displacements: True
