--- a/Project.toml
+++ b/Project.toml
@@ -56,7 +56,7 @@ DataFrames = "1"
 DataStructures = "0.18"
 Dates = "1"
 Dierckx = "0.5"
-Exodus = "0.13"
+Exodus = "0.13, 0.14"
 FastGaussQuadrature = "1"
 JSON3 = "1"
 LazyGrids = "1"
