Added Output File Type

--- a/examples/Contact/Contact.yaml
+++ b/examples/Contact/Contact.yaml
@@ -72,6 +72,7 @@ PeriLab:
       Safety Factor: 0.9
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "Contact"
       Output Frequency: 50
       Output Variables:
