--- a/test/fullscale_tests/test_BCs/displacements.yaml
+++ b/test/fullscale_tests/test_BCs/displacements.yaml
@@ -64,6 +64,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "displacements"
       Output Frequency: 1
       Output Variables:
