--- a/test/fullscale_tests/test_PD_solid_elastic/strain_yy.yaml
+++ b/test/fullscale_tests/test_PD_solid_elastic/strain_yy.yaml
@@ -50,6 +50,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "strain_yy"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
