--- a/test/fullscale_tests/test_Surface_correction/test_volume_correction.yaml
+++ b/test/fullscale_tests/test_Surface_correction/test_volume_correction.yaml
@@ -56,6 +56,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "test_volume_correction"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
