--- a/test/fullscale_tests/test_calculation/calculation.yaml
+++ b/test/fullscale_tests/test_calculation/calculation.yaml
@@ -59,6 +59,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "calculation"
       Output Frequency: 1
       Output Variables:
