--- a/test/fullscale_tests/test_correspondence_elastic_plastic/correspondence_elastic_plastic.yaml
+++ b/test/fullscale_tests/test_correspondence_elastic_plastic/correspondence_elastic_plastic.yaml
@@ -65,6 +65,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "correspondence_elastic_plastic"
       Output Frequency: 1
       Output Variables:
