--- a/test/fullscale_tests/test_critical_energy/critical_energy_field.yaml
+++ b/test/fullscale_tests/test_critical_energy/critical_energy_field.yaml
@@ -61,6 +61,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "critical_energy_field"
       Output Frequency: 1
       Output Variables:
