--- a/test/fullscale_tests/test_reload/reload1.yaml
+++ b/test/fullscale_tests/test_reload/reload1.yaml
@@ -55,6 +55,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "reload1"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
