--- a/test/benchmarks/strain_xx.yaml
+++ b/test/benchmarks/strain_xx.yaml
@@ -49,6 +49,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "strain_xx"
       Output Frequency: 1
       Output Variables:
