--- a/test/fullscale_tests/test_BCs/temperature.yaml
+++ b/test/fullscale_tests/test_BCs/temperature.yaml
@@ -61,6 +61,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "temperature"
       Output Frequency: 1
       Output Variables:
