--- a/test/fullscale_tests/test_PD_solid_elastic/strain_xx.yaml
+++ b/test/fullscale_tests/test_PD_solid_elastic/strain_xx.yaml
@@ -54,6 +54,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "strain_xx"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
