--- a/test/fullscale_tests/test_PD_solid_elastic_3D/strain_zz.yaml
+++ b/test/fullscale_tests/test_PD_solid_elastic_3D/strain_zz.yaml
@@ -56,6 +56,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "strain_zz"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
