--- a/test/fullscale_tests/test_bond_based_elastic/test_bond_based_elastic_4_points.yaml
+++ b/test/fullscale_tests/test_bond_based_elastic/test_bond_based_elastic_4_points.yaml
@@ -46,6 +46,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "test_bond_based_elastic_4_points"
       Output Frequency: 1
       Output Variables:
