--- a/test/fullscale_tests/test_correspondence_elastic/correspondence_strain_pstress_yy.yaml
+++ b/test/fullscale_tests/test_correspondence_elastic/correspondence_strain_pstress_yy.yaml
@@ -56,6 +56,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "correspondence_strain_pstress_yy"
       Output Frequency: 1
       Output Variables:
