--- a/test/fullscale_tests/test_critical_energy/critical_energy_pressure.yaml
+++ b/test/fullscale_tests/test_critical_energy/critical_energy_pressure.yaml
@@ -62,6 +62,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "critical_energy_pressure"
       Output Frequency: 1
       Output Variables:
