--- a/test/fullscale_tests/test_critical_stretch/critical_stretch_only_tension.yaml
+++ b/test/fullscale_tests/test_critical_stretch/critical_stretch_only_tension.yaml
@@ -59,6 +59,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "critical_stretch_only_tension"
       Output Frequency: 1
       Output Variables:
