--- a/test/fullscale_tests/test_critical_stretch/critical_stretch_pressure.yaml
+++ b/test/fullscale_tests/test_critical_stretch/critical_stretch_pressure.yaml
@@ -61,6 +61,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "critical_stretch_pressure"
       Output Frequency: 1
       Output Variables:
