--- a/test/fullscale_tests/test_critical_stretch/critical_stretch_tension_aniso.yaml
+++ b/test/fullscale_tests/test_critical_stretch/critical_stretch_tension_aniso.yaml
@@ -67,6 +67,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "critical_stretch_tension"
       Output Frequency: 1
       Output Variables:
