--- a/test/fullscale_tests/test_dry_run/dry_run.yaml
+++ b/test/fullscale_tests/test_dry_run/dry_run.yaml
@@ -54,6 +54,7 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
+      Output File Type: Exodus
       Output Filename: "dry_run"
       Output Frequency: 1
       Output Variables:
