--- a/test/fullscale_tests/test_penalty_contact/penalty_contact.yaml
+++ b/test/fullscale_tests/test_penalty_contact/penalty_contact.yaml
@@ -73,6 +73,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "penalty_contact"
+      Output File Type: Exodus
       Output Frequency: 50
       Output Variables:
         Displacements: True
