--- a/test/fullscale_tests/test_penalty_contact/penalty_contact_friction.yaml
+++ b/test/fullscale_tests/test_penalty_contact/penalty_contact_friction.yaml
@@ -80,6 +80,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "penalty_contact_friction"
+      Output File Type: Exodus
       Output Frequency: 50
       Output Variables:
         Displacements: True
