--- a/test/fullscale_tests/test_point_wise_material/test_point_wise_material_bond_based.yaml
+++ b/test/fullscale_tests/test_point_wise_material/test_point_wise_material_bond_based.yaml
@@ -55,6 +55,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "test_point_wise_material_bond_based"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
