--- a/test/fullscale_tests/test_two_block/one_block.yaml
+++ b/test/fullscale_tests/test_two_block/one_block.yaml
@@ -41,6 +41,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "one_block"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
