--- a/test/fullscale_tests/test_two_block/two_block.yaml
+++ b/test/fullscale_tests/test_two_block/two_block.yaml
@@ -46,6 +46,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "two_block"
+      Output File Type: Exodus
       Output Frequency: 1
       Output Variables:
         Displacements: True
